--- a/AWS_SDK_2_0/build.gradle
+++ b/AWS_SDK_2_0/build.gradle
@@ -25,6 +25,10 @@ dependencies {
     // https://mvnrepository.com/artifact/software.amazon.awssdk/core
     compile group: 'software.amazon.awssdk', name: 'core', version: '2.0.0-preview-5'
 
+    // https://mvnrepository.com/artifact/software.amazon.awssdk/dynamodb
+    compile group: 'software.amazon.awssdk', name: 'dynamodb', version: '2.0.0-preview-5'
+
+
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
