Added further SDK 2.0 examples

--- a/AWS_SDK_2_0/build.gradle
+++ b/AWS_SDK_2_0/build.gradle
@@ -19,8 +19,12 @@ repositories {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.21'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-nop
+    testCompile group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.25'
+
+
 
     // https://mvnrepository.com/artifact/software.amazon.awssdk/core
     compile group: 'software.amazon.awssdk', name: 'core', version: '2.0.0-preview-5'
