Small change to user data example

--- a/CloudFormation/8_User_Data_and_cfn_init/1-ec2-user-data.yaml
+++ b/CloudFormation/8_User_Data_and_cfn_init/1-ec2-user-data.yaml
@@ -33,7 +33,7 @@ Resources:
            chmod 2775 /var/www
            find /var/www -type d -exec chmod 2775 {} +
            find /var/www -type f -exec chmod 0664 {} +
-           echo "<?php phpinfo(); ?>" > /var/www/html/phpinfo.php
+           echo "<h1>ZG JUG yay! :D</h1><img src="https://s3.amazonaws.com/mdubel-test-bucket/POL_Zielona_G%C3%B3ra_COA.svg ">" > /var/www/html/index.htm
 
   WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
